QA-4929: updated versions in pom; changed "org.apache.commons.lang" to "org.apache.commons.lang3"(text); fixed conflicts